fix: address Checkstyle issues